src/sass/pages/_game.scss
.game {
    background-color: #f5f5f5;

    &_header {
        background: black;
        width: 100%;
        height: 100px;
        display: flex;
        align-items: center;
        justify-content: flex-end;

        &_container {
            padding-right: 2rem;
        }

        span {
            font-family: "DM Sans";
            font-style: normal;
            font-weight: 700;
            font-size: 25px;
            line-height: 33px;
            color: #ffffff;
            margin: 0 1rem;
        }
    }

    &_body {
        width: 100%;
        min-height: 100vh;
        padding: 100px 0;
        display: flex;
        justify-content: center;

        &_container {
            display: grid;
            grid-template-columns: 1fr 1fr 1fr 1fr;
            gap: 15px;

            @media (max-width: 800px) {
                grid-template-columns: 1fr 1fr 1fr;
                gap: 10px;
                grid-template-rows: min-content min-content min-content min-content;
            }
        }
    }
}

